--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   </fieldset>
 
                   <!-- Кнопка для закрытия формы редактирования изображения -->
-                  <button type="reset" class="img-upload__cancel  cancel" id="upload-cancel">Закрыть</button>
+                  <button type="reset" class="img-upload__cancel  cancel" id="upload-cancel" name="resetButton">Закрыть</button>
                 </div>
 
                 <!-- Наложение эффекта на изображение -->
@@ -125,7 +125,7 @@
                 </fieldset>
 
                 <!-- Кнопка для отправки данных на сервер -->
-                <button type="submit" class="img-upload__submit" id="upload-submit">Опубликовать</button>
+                <button type="submit" class="img-upload__submit" id="upload-submit" name="submitButton">Опубликовать</button>
               </div>
             </div>
           </form>
@@ -232,8 +232,8 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-  <script src="vendor/nouislider/nouislider.js"></script>
-  <script src="vendor/pristine/pristine.min.js"></script>
+  <script src="vendor/nouislider/nouislider.js" defer></script>
+  <script src="vendor/pristine/pristine.min.js" defer></script>
   <script src="./js/main.js" type="module"></script>
 </body>
 </html>
